[gd_scene load_steps=23 format=3 uid="uid://3v4j8f6k7rre"]

[ext_resource type="Script" uid="uid://d2p1x4lp1cm5m" path="res://code stuff/kelp_man.gd" id="1_orawk"]
[ext_resource type="Texture2D" uid="uid://b326nhly54e7e" path="res://UI STUFF/Kelp cove/Kelp_Man_Cove_Spritesheet1.png" id="2_1qk4g"]
[ext_resource type="PackedScene" uid="uid://bqo35voi18fb2" path="res://emotion/KELP MAN/kelp_emotion.tscn" id="2_ol3r6"]
[ext_resource type="Script" uid="uid://bc8vl7582f5l0" path="res://code stuff/label.gd" id="3_co7ud"]
[ext_resource type="FontFile" uid="uid://crxxdqw51b1yr" path="res://PixelifySans-VariableFont_wght.ttf" id="4_1qk4g"]
[ext_resource type="Texture2D" uid="uid://ci23hje88tif5" path="res://UI STUFF/Kelp cove/Kelp_Man_Cove_Character_Text_box.png" id="5_1qk4g"]
[ext_resource type="Script" uid="uid://cknajgl5bsa1t" path="res://code stuff/chatlog.gd" id="5_lbieo"]
[ext_resource type="FontFile" uid="uid://cgw4400ha4cr4" path="res://Jersey20-Regular.ttf" id="5_w2ql3"]
[ext_resource type="Texture2D" uid="uid://ddjy0nlnpak3a" path="res://UI STUFF/Kelp cove/Kelp_Man_Cove_Player_Text_box.png" id="6_co7ud"]
[ext_resource type="Shader" uid="uid://dikse5fp3siql" path="res://underwater.gdshader" id="6_w2ql3"]
[ext_resource type="Texture2D" uid="uid://d20k3u1uh148t" path="res://UI STUFF/Kelp_Man_Cove_Enter.png" id="9_1qk4g"]
[ext_resource type="Texture2D" uid="uid://bp5rrliqtk2x5" path="res://UI STUFF/Kelp cove/Kelp_Man_Cove_Log.png" id="9_lbieo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1qk4g"]
texture = ExtResource("5_1qk4g")
modulate_color = Color(1, 1, 1, 0.933333)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w2ql3"]
texture = ExtResource("6_co7ud")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a81c1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cc3mg"]
texture = ExtResource("9_lbieo")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g5soc"]
texture = ExtResource("9_1qk4g")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_window_panel"]
bg_color = Color(0.1, 0.1, 0.15, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.4, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_chat_panel"]
bg_color = Color(0.1, 0.1, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.4, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_chat_scroll"]
bg_color = Color(0.05, 0.05, 0.1, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.2, 0.3, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1qk4g"]
shader = ExtResource("6_w2ql3")
shader_parameter/wave_amplitude = 0.003
shader_parameter/wave_frequency = 12.0
shader_parameter/wave_speed = 0.3
shader_parameter/caustic_strength = 0.004
shader_parameter/caustic_speed = 0.25
shader_parameter/tint_color = Color(0.294118, 0.615686, 0.592157, 0.345098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v6wc0"]

[node name="KELP MAN" type="Node2D"]
position = Vector2(-173, -5)
script = ExtResource("1_orawk")

[node name="KelpManCoveSpritesheet1" type="Sprite2D" parent="."]
position = Vector2(750, 325)
scale = Vector2(9, 9)
texture = ExtResource("2_1qk4g")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="kelp_emotion" parent="." instance=ExtResource("2_ol3r6")]
position = Vector2(550, 325)
scale = Vector2(9.5, 9.5)

[node name="AIResponsePanel" type="Panel" parent="."]
offset_left = 193.0
offset_top = 329.0
offset_right = 968.0
offset_bottom = 629.0
theme_override_styles/panel = SubResource("StyleBoxTexture_1qk4g")

[node name="Label" type="RichTextLabel" parent="AIResponsePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 52.85
offset_top = 82.8
offset_right = -5.15002
offset_bottom = -14.2
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.933333, 0.866667)
theme_override_colors/default_color = Color(1.73271e-05, 0.907263, 0.0760686, 1)
theme_override_colors/font_outline_color = Color(0, 0.0705882, 0.168627, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/normal_font = ExtResource("5_w2ql3")
fit_content = true
script = ExtResource("3_co7ud")

[node name="TypingTimer" type="Timer" parent="."]
wait_time = 0.005

[node name="PlayerInputPanel" type="Panel" parent="."]
offset_left = 977.0
offset_top = 76.0
offset_right = 1477.0
offset_bottom = 526.0
scale = Vector2(0.7, 1.2)
theme_override_styles/panel = SubResource("StyleBoxTexture_w2ql3")

[node name="PlayerInput" type="TextEdit" parent="PlayerInputPanel"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 0
offset_left = 78.95
offset_top = 54.3
offset_right = 478.95
offset_bottom = 354.3
scale = Vector2(0.855, 0.86)
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0.0705882, 0.168627, 1)
theme_override_colors/font_color = Color(2.45467e-05, 0.98826, 0.0870997, 1)
theme_override_colors/caret_background_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0.0705882, 0.168627, 1)
theme_override_constants/outline_size = 10
theme_override_constants/caret_width = 10
theme_override_fonts/font = ExtResource("5_w2ql3")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_a81c1")
wrap_mode = 1
indent_wrapped_lines = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 995.0
offset_top = 453.0
offset_right = 1399.0
offset_bottom = 543.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 1.2)

[node name="ChatLog" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 90)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_cc3mg")
theme_override_styles/pressed = SubResource("StyleBoxTexture_cc3mg")
theme_override_styles/normal = SubResource("StyleBoxTexture_cc3mg")

[node name="DayCompleteButton" type="Button" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 90)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.4, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = SubResource("StyleBoxTexture_g5soc")
theme_override_styles/pressed = SubResource("StyleBoxTexture_g5soc")
theme_override_styles/normal = SubResource("StyleBoxTexture_g5soc")
text = "Day Complete"

[node name="NextButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 90)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_g5soc")
theme_override_styles/pressed = SubResource("StyleBoxTexture_g5soc")
theme_override_styles/normal = SubResource("StyleBoxTexture_g5soc")

[node name="ChatLogWindow" type="Window" parent="."]
title = "Chat Log - Kelp Man"
initial_position = 1
size = Vector2i(600, 400)
visible = false
transient = true
always_on_top = true
min_size = Vector2i(300, 200)
max_size = Vector2i(1920, 1080)
content_scale_mode = 1
content_scale_aspect = 1
theme_override_colors/title_color = Color(0.9, 0.9, 0.95, 1)
theme_override_styles/embedded_border = SubResource("StyleBoxFlat_window_panel")
script = ExtResource("5_lbieo")

[node name="ChatLogPanel" type="Panel" parent="ChatLogWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_chat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="ChatLogWindow/ChatLogPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="ChatLogWindow/ChatLogPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
theme_override_fonts/font = ExtResource("4_1qk4g")
theme_override_font_sizes/font_size = 16
text = "Conversation History"
autowrap_mode = 3

[node name="FontSizeContainer" type="HBoxContainer" parent="ChatLogWindow/ChatLogPanel/VBoxContainer"]
layout_mode = 2

[node name="FontSizeLabel" type="Label" parent="ChatLogWindow/ChatLogPanel/VBoxContainer/FontSizeContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
theme_override_fonts/font = ExtResource("4_1qk4g")
theme_override_font_sizes/font_size = 12
text = "Font Size:"

[node name="DecreaseFontButton" type="Button" parent="ChatLogWindow/ChatLogPanel/VBoxContainer/FontSizeContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_1qk4g")
theme_override_font_sizes/font_size = 12
text = "A-"

[node name="IncreaseFontButton" type="Button" parent="ChatLogWindow/ChatLogPanel/VBoxContainer/FontSizeContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_1qk4g")
theme_override_font_sizes/font_size = 12
text = "A+"

[node name="VSeparator" type="VSeparator" parent="ChatLogWindow/ChatLogPanel/VBoxContainer/FontSizeContainer"]
layout_mode = 2

[node name="FullscreenButton" type="Button" parent="ChatLogWindow/ChatLogPanel/VBoxContainer/FontSizeContainer"]
layout_mode = 2
tooltip_text = "Toggle Fullscreen"
theme_override_fonts/font = ExtResource("4_1qk4g")
theme_override_font_sizes/font_size = 12
text = "⛶"

[node name="VSeparator2" type="VSeparator" parent="ChatLogWindow/ChatLogPanel/VBoxContainer/FontSizeContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="ChatLogWindow/ChatLogPanel/VBoxContainer/FontSizeContainer"]
layout_mode = 2
tooltip_text = "Close Chat Log"
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_fonts/font = ExtResource("4_1qk4g")
theme_override_font_sizes/font_size = 12
text = "✕"

[node name="HSeparator" type="HSeparator" parent="ChatLogWindow/ChatLogPanel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="ChatLogWindow/ChatLogPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_chat_scroll")
horizontal_scroll_mode = 0

[node name="ChatLogLabel" type="RichTextLabel" parent="ChatLogWindow/ChatLogPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.9, 0.9, 0.95, 1)
theme_override_fonts/normal_font = ExtResource("4_1qk4g")
bbcode_enabled = true
scroll_following = true

[node name="HSeparator2" type="HSeparator" parent="ChatLogWindow/ChatLogPanel/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="ChatLogWindow/ChatLogPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
theme_override_fonts/font = ExtResource("4_1qk4g")
theme_override_font_sizes/font_size = 10
text = "0 messages"
horizontal_alignment = 2
autowrap_mode = 3

[node name="ColorRect2" type="ColorRect" parent="."]
top_level = true
material = SubResource("ShaderMaterial_1qk4g")
offset_left = 1.00001
offset_top = 51.0
offset_right = 116.0
offset_bottom = 110.0
scale = Vector2(10, 10)
mouse_filter = 2

[node name="TopNavigationBar" type="Control" parent="."]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -588.0
grow_horizontal = 2
grow_vertical = 0

[node name="TopBarBackground" type="Panel" parent="TopNavigationBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_window_panel")

[node name="DayState" type="Label" parent="TopNavigationBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = -15.0
offset_right = 250.0
offset_bottom = 15.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
theme_override_font_sizes/font_size = 16
text = "Day 1 - Action 5"
vertical_alignment = 1

[node name="TitleLabel" type="Label" parent="TopNavigationBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -15.0
offset_right = 120.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.7, 0.9, 1, 1)
theme_override_fonts/font = ExtResource("4_1qk4g")
theme_override_font_sizes/font_size = 20
text = "KELP MAN COVE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="map" type="Button" parent="TopNavigationBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -15.0
offset_right = -15.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
theme_override_fonts/font = ExtResource("4_1qk4g")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_v6wc0")
text = "Map"

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="HBoxContainer/ChatLog" to="." method="_on_chat_log_pressed"]
[connection signal="pressed" from="HBoxContainer/DayCompleteButton" to="." method="_on_day_complete_pressed"]
[connection signal="pressed" from="HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="ChatLogWindow/ChatLogPanel/VBoxContainer/FontSizeContainer/DecreaseFontButton" to="ChatLogWindow" method="_on_decrease_font_button_pressed"]
[connection signal="pressed" from="ChatLogWindow/ChatLogPanel/VBoxContainer/FontSizeContainer/IncreaseFontButton" to="ChatLogWindow" method="_on_increase_font_button_pressed"]
[connection signal="pressed" from="ChatLogWindow/ChatLogPanel/VBoxContainer/FontSizeContainer/FullscreenButton" to="ChatLogWindow" method="_on_fullscreen_button_pressed"]
[connection signal="pressed" from="ChatLogWindow/ChatLogPanel/VBoxContainer/FontSizeContainer/CloseButton" to="ChatLogWindow" method="_on_close_button_pressed"]
[connection signal="pressed" from="TopNavigationBar/map" to="." method="_on_map_pressed"]
